--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="center jumbotron">
   <h1>Welcome to my test application</h1>
   <button class="btn btn-success">
-    <%= link_to "Sign Up", new_user_registration_path %>
+    <%= link_to "View all runs", "/runs" %>
   </button>
 </div>
