--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
               <%= link_to "Sign In", new_user_session_path %>
             </li>
               <li>
-              <%= link_to "Sign Out", new_user_registration_path %>
+              <%= link_to "Sign Up", new_user_registration_path %>
             </li>
             <% end %>
           </ul>
