added Ticket model

--- a/app/views/runs/_form.html.erb
+++ b/app/views/runs/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :date_of_departure %>
-    <%= form.datetime_select :date_of_departure, id: :run_date_of_departure %>
+    <%= form.date_select :date_of_departure, id: :run_date_of_departure %>
   </div>
 
   <div class="field">
